--- a/templates/browse.html
+++ b/templates/browse.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>Spots</title>
+        {% block title %}Spots{% endblock %}
     </head>
 
     <body>
