--- a/templates/edit_message.html
+++ b/templates/edit_message.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-    <title>Edit message</title>
+    {% block title %}Edit message{% endblock %}
     </head>
     <body>
         <div class="header">
