--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-    <title>Edit spot details</title>
+    {% block title %}Edit spot details{% endblock %}
     </head>
     <body>
         <div class="header">
