--- a/templates/remove.html
+++ b/templates/remove.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>Remove spot</title>
+        {% block title %}Remove spot{% endblock %}
     </head>
 
     <body>
