--- a/templates/remove_message.html
+++ b/templates/remove_message.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>Remove Message</title>
+        {% block title %}Remove Message{% endblock %}
     </head>
 
     <body>
