--- a/templates/search.html
+++ b/templates/search.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>Spot search</title>
+        {% block title %}Spot search{% endblock %}
     </head>
-    
+
     <body>
         <div class="header">
             <h1>Search spots</h1>
