--- a/templates/spot.html
+++ b/templates/spot.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>{{ spot.title }}</title>
+        {% block title %}{{ spot.title }}{% endblock %}
     </head>
 
     <body>
