--- a/templates/user.html
+++ b/templates/user.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>User page</title>
+        {% block title %}User page{% endblock %}
     </head>
     <body>
         <div class="header">
