--- a/templates/browse_users.html
+++ b/templates/browse_users.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="/static/main.css">
 
     <head>
-        <title>Users</title>
+        {% block title %}Users{% endblock %}
     </head>
 
     <body>
