Extended all sites to layout.html

--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -1,76 +1,71 @@
-<!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="/static/main.css">
+{% extends "layout.html" %}
 
-    <head>
-    {% block title %}Add new spot{% endblock %}
-    </head>
-    <div class="info">
+{% block title %}Add new spot{% endblock %}
+
+{% block content %}
+    
+<h1>Add new spot</h1>
+<div class="info">
     {% for message in get_flashed_messages() %}
         <b>{{ message }}</b>
     {% endfor %}
-    </div>
-    <body>
-        <div class="header">
-        <h1>Add new spot</h1>
-        </div>
+</div>
 
-        <div class="content">
-        <form action="/add_spot" method="post" enctype="multipart/form-data">
-            <p>
-                <label for="title">Spot title</label>: <br />
-            <input type="text" name="title" value= "{{ filled.title }}" maxlength="100" required/>
-            </p>
-            <p>
-                <label for="country">Country</label>: <br />
-                <select name="country" required>
-                    {% for continent in categories.continents %}
-                    <optgroup label="{{ continent[1] }}">
-                        {% for country in categories.countries %}
-                            {% if country[2] == continent[0] %}
-                                <option value="{{ country[0] }}" {% if country[0] == 115 %}selected{% endif %}>
-                                {{ country [1] }}    
-                            {% endif %}
-                        {% endfor %}
-                    </optgroup>
-                    {% endfor %}
-                </select>
-            </p>
-            <p>
-                <label for="aspect">Slope aspect</label>: <br />
-            <input type="text" name="aspect" value= "{{ filled.aspect }}" maxlength="10" />
-            </p>
-            <p>
-                <label for="skill_level">Skill level</label>: <br />
-            <select name="skill_level">
-                {% for skill_level in categories.skill_levels %}
-                    <option value="{{ skill_level[0]}}"
-                                    {% if filled.skill_level and filled.skill_level == skill_level[0] %}
-                                    selected
-                                    {% endif %}>
-                        {{ skill_level[1] }}
-                </option>
+<div class="content">
+<form action="/add_spot" method="post" enctype="multipart/form-data">
+    <p>
+        <label for="title">Spot title</label>: <br />
+    <input type="text" name="title" value= "{{ filled.title }}" maxlength="100" required/>
+    </p>
+    <p>
+        <label for="country">Country</label>: <br />
+        <select name="country" required>
+            {% for continent in categories.continents %}
+            <optgroup label="{{ continent[1] }}">
+                {% for country in categories.countries %}
+                    {% if country[2] == continent[0] %}
+                        <option value="{{ country[0] }}" {% if country[0] == 115 %}selected{% endif %}>
+                        {{ country [1] }}    
+                    {% endif %}
                 {% endfor %}
-            </select>
-            </p>
-            <p>
-                <label for="incline">Slope maximum incline</label>: <br />
-            <input type="text" name="max_incline" value= "{{ filled.max_incline }}" maxlength="3" />
-            </p>
-            <p>
-                <label for="notes">Notes</label>: <br />
-            <textarea name="notes" rows="10" cols="100" maxlength="5000">{{ filled.notes }}</textarea>
-            </p>
-            <p>
-                <label>Image:</label>
-            <input type="file" name="image" accept=".jpg, .png">
-            </p>
-            <p>
-            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
-            <input type="submit" name="submit" value="Submit" />
-            <button type="button" onclick="window.history.back()">Cancel</button>
-            </p>
-        </form>
-        </div>
-    </body>
-</html>
+            </optgroup>
+            {% endfor %}
+        </select>
+    </p>
+    <p>
+        <label for="aspect">Slope aspect</label>: <br />
+    <input type="text" name="aspect" value= "{{ filled.aspect }}" maxlength="10" />
+    </p>
+    <p>
+        <label for="skill_level">Skill level</label>: <br />
+    <select name="skill_level">
+        {% for skill_level in categories.skill_levels %}
+            <option value="{{ skill_level[0]}}"
+                            {% if filled.skill_level and filled.skill_level == skill_level[0] %}
+                            selected
+                            {% endif %}>
+                {{ skill_level[1] }}
+        </option>
+        {% endfor %}
+    </select>
+    </p>
+    <p>
+        <label for="incline">Slope maximum incline</label>: <br />
+    <input type="text" name="max_incline" value= "{{ filled.max_incline }}" maxlength="3" />
+    </p>
+    <p>
+        <label for="notes">Notes</label>: <br />
+    <textarea name="notes" rows="10" cols="100" maxlength="5000">{{ filled.notes }}</textarea>
+    </p>
+    <p>
+        <label>Image:</label>
+    <input type="file" name="image" accept=".jpg, .png">
+    </p>
+    <p>
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+    <input type="submit" name="submit" value="Submit" />
+    <button type="button" onclick="window.history.back()">Cancel</button>
+    </p>
+</form>
+</div>
+{% endblock %}
