--- a/templates/remove_message.html
+++ b/templates/remove_message.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="/static/main.css">
+{% extends "layout.html" %}
 
-    <head>
-        {% block title %}Remove Message{% endblock %}
-    </head>
+{% block title %}Remove message{% endblock %}
 
-    <body>
-        <div class="content">
-        <p>
-            Are you sure you want to remove this message?
-        </p>
-        <p>
-            {{ message.content }}
-        </p>
-        <form action="/remove_message/{{ message.id }}" method="post">
-            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
-            <input type="submit" name="yes" value="Yes" />
-            <input type="submit" name="cancel" value="Cancel" />
-        </form>
-        </div>
-    </body>
-</html>
+{% block content %}
+<div class="content">
+<p>
+    Are you sure you want to remove this message?
+</p>
+<p>
+    {{ message.content }}
+</p>
+<form action="/remove_message/{{ message.id }}" method="post">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+    <input type="submit" name="yes" value="Yes" />
+    <input type="submit" name="cancel" value="Cancel" />
+</form>
+</div>
+{% endblock %}
