--- a/templates/browse_users.html
+++ b/templates/browse_users.html
@@ -1,34 +1,28 @@
-<!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="/static/main.css">
+{% extends "layout.html" %}
 
-    <head>
-        {% block title %}Users{% endblock %}
-    </head>
+{% block title %}Users{% endblock %}
 
-    <body>
-        <div class="header">
-        <h1>Browse users</h1>
-        </div>
+{% block content %}
 
-        <hr />
-        <a href="/home">Back to front page</a>
-        <a href="/user/{{ session.user_id }}">Own user page</a>
-        <hr />
-        <div class="content">
-        {% for user in user_list|sort (attribute='username') %}
-        <p>
-        <h2><a href="/user/{{ user.id }}">{{ user.username }}</a></h2> Member since {{ user.added_at }}
-        </p>
-        {% endfor %}
-        <hr />
-        <p>
-        <a href="/browse_users/{{ page - 1 }}">&lt;&lt;</a>
-        Page {{ page }}/{{ page_count }}
-        <a href="/browse_users/{{ page + 1 }}">&gt;&gt;</a>
-        </p>
-        <hr />
-        <a href="/home">Back to front page</a>
-        </div>
-    </body>
-</html>
+<h1>Browse users</h1>
+
+<hr />
+<a href="/home">Back to front page</a>
+<a href="/user/{{ session.user_id }}">Own user page</a>
+<hr />
+<div class="content">
+{% for user in user_list|sort (attribute='username') %}
+<p>
+<h2><a href="/user/{{ user.id }}">{{ user.username }}</a></h2> Member since {{ user.added_at }}
+</p>
+{% endfor %}
+<hr />
+<p>
+<a href="/browse_users/{{ page - 1 }}">&lt;&lt;</a>
+Page {{ page }}/{{ page_count }}
+<a href="/browse_users/{{ page + 1 }}">&gt;&gt;</a>
+</p>
+<hr />
+<a href="/home">Back to front page</a>
+</div>
+{% endblock %}
