--- a/templates/index.html
+++ b/templates/index.html
@@ -1,35 +1,12 @@
-<!DOCTYPE html>
-<html>
- 
-<head>
-  {% block title %}Powderatlas{% endblock %}
-  <link rel="stylesheet" href="/static/main.css">
-</head>
+{% extends "layout.html" %}
 
-<body>
-    <div class="header">
-    <h1>Powderatlas</h1>
-    </div>
+{% block title %}Powderatlas front page{% endblock %}
 
-  <div class="nav">
-      <nav>
-        <ul>
-          <li><a href="/">Front page</a></li>
-          <li><a href="/add_spot">Add a new spot</a></li>
-          <li><a href="/browse">Spots</a></li>
-          <li><a href="/browse_users">Users</a></li>
-          <li><a href="/search">Search spots</a></li>
-          <li><a href="/user/{{ session.user_id }}">User page</a></li>
-          <li><a href="/logout">Log out</a></li>
-        </ul>
-      </nav>
-    </div>
-
-  <div class="content">
-  <p>
-  Welcome to Powderatlas {{ username }}
-  </p>
-  </div>
-</body>
-
-</html>
+{% block content %}
+<h1>Powderatlas front page</h1>
+<div class="content">
+<p>
+Welcome to Powderatlas {{ username }}
+</p>
+</div>
+{% endblock %}
