--- a/templates/remove.html
+++ b/templates/remove.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html>
-<link rel="stylesheet" href="/static/main.css">
+{% extends "layout.html" %}
 
-    <head>
-        {% block title %}Remove spot{% endblock %}
-    </head>
+{% block title %}Remove spot{% endblock %}
 
-    <body>
-        <div class="content">
-        <p>
-            Are you sure you want to remove {{ spot.title }}?
-        </p>
-        <form action="/remove_spot/{{ spot.id }}" method="post">
-            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
-            <input type="submit" name="yes" value="Yes" />
-            <input type="submit" name="cancel" value="Cancel" />
-        </form>
-        </div>
-    </body>
-</html>
+{% block content %}
+<div class="content">
+<p>
+    Are you sure you want to remove {{ spot.title }}?
+</p>
+<form action="/remove_spot/{{ spot.id }}" method="post">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+    <input type="submit" name="yes" value="Yes" />
+    <input type="submit" name="cancel" value="Cancel" />
+</form>
+</div>
+{% endblock %}
