--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,14 +3,14 @@
  
 <head>
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="/static/main.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
 <body>
     <div class="header">
     <h1>Powderatlas</h1>
     </div>
-
+  {% block nav %}    
   <div class="nav">
       <nav>
         <ul>
@@ -24,6 +24,7 @@
         </ul>
       </nav>
     </div>
+    {% endblock %}
 
   <div class="content">
     {% block content %}{% endblock %}
