Added test background image and background class to layout and styling in css

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 
-<body>
+<body class="background">
     <div class="header">
     <h1>Powderatlas</h1>
     </div>
