--- a/static/main.css
+++ b/static/main.css
@@ -1,8 +1,18 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
     margin: auto;
     max-width: 50em;
     font-family: sans-serif;
-    background-color: rgb(68, 99, 147);
+}
+
+.background {
+    background: rgba(68, 99, 147, 0.5) url("/static/images/background_4K.jpg") center/cover no-repeat;
+    min-height: 100vh;
+    background-attachment: fixed;
 }
 
 .header {
@@ -11,7 +21,7 @@ body {
 }
 
 .nav {
-    background-color: rgba(45, 68, 101, 0.5);
+    background-color: rgba(45, 68, 101, 1);
 }
 
 nav {
@@ -35,7 +45,7 @@ nav li:not(:last-of-type) {
 
 .content {
     color: rgb(178, 223, 255);
-    background-color: rgba(45, 68, 101, 0.5);
+    background-color: rgba(45, 68, 101, 0.75);
 } 
 
 
