--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -69,7 +69,7 @@
     <p>
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     <input type="submit" name="submit" value="Submit" />
-    <button type="button" onclick="window.history.back()">Cancel</button>
+    <button type="button" onclick="window.location.href='/'">Cancel</button>
     </p>
 </form>
 </div>
