Added placeholders for front page latest spots and messages

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,15 @@
 <h1>Powderatlas front page</h1>
 <div class="content">
 <p>
-Welcome to Powderatlas {{ username }}
+    Welcome to Powderatlas {{ username }}
 </p>
+<p>
+    Share the stoke!
+</p>
+<h2>Recent activity:</h2>
+<h3>Latest spots</h3>
+<h3>Latest messages</h3>
+
+
 </div>
 {% endblock %}
