styled h1 and layout header

--- a/static/main.css
+++ b/static/main.css
@@ -9,6 +9,12 @@ body {
     font-family: sans-serif;
 }
 
+h1 {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-top: 10;
+  margin-bottom: 5
+}
+
 .background {
     background: rgba(68, 99, 147, 0.5) url("/static/images/background_4K.jpg") center/cover no-repeat;
     min-height: 100vh;
@@ -17,6 +23,8 @@ body {
 
 .header {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2em;
+    margin-bottom: 1;
     color: rgb(178, 223, 255);
 }
 
