--- a/templates/browse.html
+++ b/templates/browse.html
@@ -32,6 +32,7 @@
         <option value="{{ skill_level[1] }}" {% if request.args.get("skill_level") == skill_level[1] %}selected{% endif %}>{{ skill_level[1] }}</option>
         {% endfor %}
     </select>
+    <input type="submit" class="button" />
     <a href="/browse" class="button">Clear</button>
 </form>
 
