--- a/templates/browse.html
+++ b/templates/browse.html
@@ -9,24 +9,25 @@
 <!--Filter bar-->
 <form method="GET" action="/browse" class="filter-bar">
     <label for="continent">Continent:</label>
-    <select name="continent" id="continent" onchange="this.form.submit()">
+    <select name="continent" id="continent" {% if request.args.get("continent") %}disabled{% endif %}>
         <option value="" id="all">All</option>
         {% for continent in categories.continents %}
         <option value="{{ continent[1] }}" {% if request.args.get("continent") == continent[1] %}selected{% endif %}>{{ continent[1] }}</option>
         {% endfor %}
     </select>
 
-
+    {% if request.args.get("continent") %}
     <label for="country">country:</label>
-    <select name="country" id="country" onchange="this.form.submit()">
+    <select name="country" id="country">
         <option value="">All</option>
         {% for country in categories.countries %}
         <option value="{{ country[1] }}" {% if request.args.get("country") == country[1] %}selected{% endif %}>{{ country[1] }}</option>
         {% endfor %}
     </select>
+    {% endif %}
 
     <label for="skill_level">Skill level:</label>
-    <select name="skill_level" id="skill_level" onchange="this.form.submit()">
+    <select name="skill_level" id="skill_level">
         <option value="">All</option>
         {% for skill_level in categories.skill_levels %}
         <option value="{{ skill_level[1] }}" {% if request.args.get("skill_level") == skill_level[1] %}selected{% endif %}>{{ skill_level[1] }}</option>
