Fixed filter logic to store continent selection

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -17,6 +17,8 @@
     </select>
 
     {% if request.args.get("continent") %}
+    <input type="hidden" name="continent" value="{{ request.args.get('continent') }}">
+    
     <label for="country">country:</label>
     <select name="country" id="country">
         <option value="">All</option>
