--- a/static/main.css
+++ b/static/main.css
@@ -61,24 +61,25 @@ a:link {
 
 .button {
 display: inline-block;
-padding: 10px 20px;
+padding: 3px 20px;
 background-color: rgb(124, 124, 124);
 border: 1px solid rgb(207, 207, 207);
 color: rgb(0, 0, 0) !important;
 border-radius: 5px;
 text-decoration: none;
-font-size: 16px;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 14px;
 cursor: pointer;
 
 }
 
 input[type="submit"] {
 display: inline-block;
-padding: auto;
+padding: 3px 20px;
 background-color: rgb(124, 124, 124);
 border: 1px solid rgb(207, 207, 207);
 border-radius: 5px;
 text-decoration: none;
-font-size: 16px;
+font-size: 14px;
 cursor: pointer;
 }
